Archivos estaticos y inclusion de Bootstrap

--- a/SeRu/templates/registration/login.html
+++ b/SeRu/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+
 
 {% block content %}
 
@@ -16,23 +16,41 @@
 
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
+<!doctype html>
+<html lang="en">
+  <head>
+    {% load static %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="{% static 'SeRu/Imagenes/índice.jpeg' %}">
 
-<div>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</div>
-<div>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</div>
+    <title>Signin Template for Bootstrap</title>
 
-<div>
-  <input type="submit" value="login" />
-  <input type="hidden" name="next" value="{{ next }}" />
-</div>
-</form>
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'SeRu/bootstrap.min.css' %}" rel="stylesheet">
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">¿Contraseña perdida?</a></p>
+    <!-- Custom styles for this template -->
+    <link href="{% static 'SeRu/signin.css' %}" rel="stylesheet">
+  </head>
 
+  <body style="display: block; margin-right: 40%;margin-left: 40%"class="text-center">
+    <form class="form-signin">
+      <img class="mb-4" src="{% static 'SeRu/Imagenes/índice.jpeg' %}" alt="" width="72" height="72">
+      <h1>Bienvenido a Segunda Rueda</h1>
+     <div>
+      <td>Usuario</td>
+      <td>{{ form.username }}</td>
+     </div>
+      <div>
+        <td>Contraseña</td>
+         <td>{{ form.password }}</td>
+        </div>
+      <br>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Conectar</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2018-2019</p>
+    </form>
+  </body>
+</html>
 {% endblock %}
