--- a/SeRu/templates/SeRu/home.html
+++ b/SeRu/templates/SeRu/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-<h1 align="center">Bienvenido a segunda rueda</h1>
-<a href="http://127.0.0.1:8000/registrarse/">Crea tu cuenta</a>
-<a href="http://127.0.0.1:8000/accounts/login/">Loggeate</a>
+{% block content %}
+<h1 align="center">Bienvenido a Segunda Rueda</h1>
 <br>
+{% endblock %}
 <p>Bienvenido {{user.username}}</p>
