--- a/SeRu/templates/SeRu/nuevo_post.html
+++ b/SeRu/templates/SeRu/nuevo_post.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
-
-{% block title %}Crea tu nuevo post{% endblock %}
-
 {% block content %}
+{% if not user.is_authenticated %}
+<h1>Necesitas una cuenta para poder crear un post</h1>
+{% endif %}
+{% if user.is_authenticated %}
+<h1>Introduce los datos de tu post</h1>
+
+
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" name="submit">
     </form>    
+{% endif %}
 {% endblock content %}
