--- a/SeRu/templates/base.html
+++ b/SeRu/templates/base.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="http://127.0.0.1:8000/">Inicio <span class="sr-only">(current)</span></a>
           </li>
           {% if not user.is_authenticated %}
           <li class="nav-item">
