--- a/SeRu/templates/SeRu/registrarse.html
+++ b/SeRu/templates/SeRu/registrarse.html
@@ -3,10 +3,10 @@
 {% block content %}
   <h2 style="text-align: center;">Registro de usuario</h2>
   <form method="post">
-  	<div style="display: flex">
+  	<div style="text-align: center;">
     {% csrf_token %}
     {{ form.as_p }}
-    </div>
     <button type="submit">Enviar registro</button>
+    </div>
   </form>
 {% endblock %}
