--- a/SeRu/templates/SeRu/nuevo_vehiculo.html
+++ b/SeRu/templates/SeRu/nuevo_vehiculo.html
@@ -3,9 +3,12 @@
 {% block title %}Añade el nuevo vehiculo{% endblock %}
 
 {% block content %}
+<h1 style="text-align: center;">Introduce los datos de tu vehiculo</h1>
+	<div style="text-align: center;">
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" name="submit">
-    </form>    
+    </form> 
+    </div>      
 {% endblock content %}
