--- a/SeRu/templates/SeRu/posts.html
+++ b/SeRu/templates/SeRu/posts.html
@@ -5,7 +5,7 @@
     <ul>
         {% for post in object_list %}
         	{{ post.pk }}
-            <a href="http://127.0.0.1:8000/posts/modificar/{{ post.id }}">{{ post.nombre_post }}</a><br>
+            <a href="http://127.0.0.1:8000/posts/mostrar/{{ post.id }}">{{ post.nombre_post }}</a><br>
         	
         {% endfor %}
     </ul>
