--- a/SeRu/templates/SeRu/nuevo_vehiculo.html
+++ b/SeRu/templates/SeRu/nuevo_vehiculo.html
@@ -3,6 +3,11 @@
 {% block title %}Añade el nuevo vehiculo{% endblock %}
 
 {% block content %}
+{% if not user.is_authenticated %}
+<h1 style="text-align: center;">Necesitas una cuenta para poder crear un post</h1>
+{% endif %}
+
+{% if user.is_authenticated %}
 <h1 style="text-align: center;">Introduce los datos de tu vehiculo</h1>
 	<div style="text-align: center;">
     <form action="" method="POST">
@@ -10,5 +15,6 @@
         {{ form.as_p }}
         <input type="submit" name="submit">
     </form> 
-    </div>      
-{% endblock content %}
+    </div>     
+{% endif %}
+{% endblock %}
