--- a/SeRu/templates/base.html
+++ b/SeRu/templates/base.html
@@ -55,14 +55,12 @@
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="http://127.0.0.1:8000/posts/agregar/">Crear un post</a>
               <a class="dropdown-item" href="http://127.0.0.1:8000/posts/">Ver todos los posts</a>
+              <!--<a class="dropdown-item" href="http://127.0.0.1:8000/usuarios/">Listado de usuarios registrados</a>-->
+              <a class="dropdown-item" href="http://127.0.0.1:8000/vehiculos/agregar/">Añadir un nuevo vehiculo</a>
               <a class="dropdown-item" href="http://127.0.0.1:8000/vehiculos/">Ver listado de vehiculos</a>
             </div>
           </li>
         </ul>
-<!--        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
--->        </form>
       </div>
     </nav>
     <br>
