--- a/SeRu/templates/base.html
+++ b/SeRu/templates/base.html
@@ -64,10 +64,14 @@
       </div>
     </nav>
     <br>
+    {% block jumbo %}
+    {% endblock %}
     {% block content %}
     {% endblock %}
     <br>
-    <footer class="container">
+    <br>
+    <br>
+    <footer class="container" style="text-align: center;">
       <p>&copy; Segunda Rueda 2018-2019</p>
     </footer>
 
