--- a/SeRu/templates/base.html
+++ b/SeRu/templates/base.html
@@ -33,11 +33,11 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="http://127.0.0.1:8000/">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{http://127.0.0.1:8000/}">Inicio <span class="sr-only">(current)</span></a>
           </li>
           {% if not user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="http://127.0.0.1:8000/registrarse/">Crea tu cuenta</a>
+            <a class="nav-link" style="color: white;" href="{% url 'registrarse' %}">Crea tu cuenta</a>
           </li>
           {% endif %}
           {% if user.is_authenticated %}
