--- a/SeRu/templates/base.html
+++ b/SeRu/templates/base.html
@@ -42,7 +42,7 @@
           {% endif %}
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="http://127.0.0.1:8000/accounts/logout/">Cerrar Sesion</a>
+            <a class="nav-link" style="color: white;" href="{% url 'django.contrib.auth.urls' %}">Cerrar Sesion</a>
           </li>
           {% endif %}
           {% if not user.is_authenticated %}
