--- a/SeRu/templates/SeRu/usuarios.html
+++ b/SeRu/templates/SeRu/usuarios.html
@@ -5,7 +5,7 @@
     <ul>
         {% for user in object_list %}
         	{{ user.pk }}
-            <a href="http://127.0.0.1:8000/usuarios/mostrar/{{ user.id }}">{{ user.username }}</a><br>
+            <a href="{% url 'usuarios/{{ user.id }}' %}">{{ user.username }}</a><br>
         	
         {% endfor %}
     </ul>
