--- a/SeRu/templates/base.html
+++ b/SeRu/templates/base.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{http://127.0.0.1:8000/}">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="http://127.0.0.1:8000/">Inicio <span class="sr-only">(current)</span></a>
           </li>
           {% if not user.is_authenticated %}
           <li class="nav-item">
@@ -42,7 +42,7 @@
           {% endif %}
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="{% url 'django.contrib.auth.urls' %}">Cerrar Sesion</a>
+            <a class="nav-link" style="color: white;" href="http://127.0.0.1:8000/accounts/logout/">Cerrar Sesion</a>
           </li>
           {% endif %}
           {% if not user.is_authenticated %}
@@ -53,11 +53,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: white;" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acciones</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="http://127.0.0.1:8000/posts/agregar/">Crear un post</a>
-              <a class="dropdown-item" href="http://127.0.0.1:8000/posts/">Ver todos los posts</a>
+              <a class="dropdown-item" href="{% url 'nuevo_post' %}">Crear un post</a>
+              <a class="dropdown-item" href="{% url 'posts' %}">Ver todos los posts</a>
               <!--<a class="dropdown-item" href="http://127.0.0.1:8000/usuarios/">Listado de usuarios registrados</a>-->
-              <a class="dropdown-item" href="http://127.0.0.1:8000/vehiculos/agregar/">Añadir un nuevo vehiculo</a>
-              <a class="dropdown-item" href="http://127.0.0.1:8000/vehiculos/">Ver listado de vehiculos</a>
+              <a class="dropdown-item" href="{% url 'nuevo_vehiculo' %}">Añadir un nuevo vehiculo</a>
+              <a class="dropdown-item" href="{% url 'vehiculos' %}">Ver listado de vehiculos</a>
             </div>
           </li>
         </ul>
