Mas cambios en las URL

--- a/SeRu/templates/SeRu/posts.html
+++ b/SeRu/templates/SeRu/posts.html
@@ -5,7 +5,7 @@
     <ul>
         {% for post in object_list %}
         	{{ post.pk }}
-            <a href="{% url 'mostrar_post/{{ post.id }}' %}">{{ post.nombre_post }}</a><br>
+            <a href="{% url 'mostrar_post' post.id %}">{{ post.nombre_post }}</a><br>
         	
         {% endfor %}
     </ul>
